--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,30 +1,89 @@
 /* app css stylesheet */
 
+body {
+    width: 30%;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-top: 20px;
+    background: #fff;
+    /*#3a4145;*/
+}
+
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+    list-style: none;
+    border-bottom: 0.1em solid black;
+    margin-bottom: 2em;
+    padding: 0 0 0.5em;
 }
 
 .menu:before {
-  content: "[";
+    content: "[";
 }
 
 .menu:after {
-  content: "]";
+    content: "]";
 }
 
 .menu > li {
-  display: inline;
+    display: inline;
 }
 
 .menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+    content: "|";
+    padding-right: 0.3em;
 }
 
 .menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+    content: "";
+    padding: 0;
+}
+
+.card {
+    font-size: 36px;
+    color: #ffffff;
+    text-shadow: 1px 1px #888;
+    text-align: center;
+}
+
+
+.card > hr {
+    color: #4777AF;
+    border-top: 1px solid #4777AF;
+}
+
+.box {
+    height: 200px;
+    padding: 30px 30px;
+    border: 1px solid #4777AF;
+    background: #6797CF;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 10px;
+    -moz-box-shadow: inset 0 0 0 1px #fff;
+    -webkit-box-shadow: inset 0 0 0 1px #fff;
+    box-shadow: inset 0 0 0 1px #87B7FF;
+}
+
+.vspace10 {
+    margin-top: 10px;
+}
+
+.vspace30 {
+    margin-top: 30px;
+}
+
+.main-content {
+    margin: 50px 10px;
+}
+
+.chevron {
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #ccc;
+    font-size: 20px;
+    text-shadow: 0px 0px;
+}
+
+.buttons {
+    height: 50px;
 }
