--- a/app/partials/card.html
+++ b/app/partials/card.html
@@ -5,7 +5,7 @@
 
 <div>
 
-    <div class="card box" ng-click="revealAnswer()">
+    <div class="card blue-box" ng-click="revealAnswer()">
         <p>{{ currentCard.front }}</p>
         <hr>
         <div ng-switch="answerIsRevealed()">
