--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -1,7 +1,12 @@
 <h1>TODO</h1>
 <ul>
-    <li>Restrict keyboard movement before answer is revealed.</li>
-    <li>CRUD on cards</li>
+    <li><del>Restrict keyboard movement before answer is revealed.</del></li>
+    <li><del>CREATE</del></li>
+    <li>UPDATE</li>
+    <li><del>DELETE</del></li>
+    <li>Card info</li>
     <li>Configuration</li>
     <li><del>Update active tab of menu bar</del></li>
+    <li>Save in local storage</li>
+    <li>Export/Import functionality</li>
 </ul>
