--- a/app/css/app.css
+++ b/app/css/app.css
@@ -51,7 +51,7 @@ body {
     border-top: 1px solid #4777AF;
 }
 
-.box {
+.blue-box {
     height: 200px;
     padding: 30px 30px;
     border: 1px solid #4777AF;
@@ -62,6 +62,19 @@ body {
     -moz-box-shadow: inset 0 0 0 1px #fff;
     -webkit-box-shadow: inset 0 0 0 1px #fff;
     box-shadow: inset 0 0 0 1px #87B7FF;
+}
+
+.gray-box {
+    height: 200px;
+    padding: 30px 30px;
+    border: 1px solid #d8d8d8;
+    background: #f9f9f9;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 10px;
+    -moz-box-shadow: inset 0 0 0 1px #fff;
+    -webkit-box-shadow: inset 0 0 0 1px #fff;
+    box-shadow: inset 0 0 0 1px #fff;
 }
 
 .vspace10 {
@@ -86,4 +99,36 @@ body {
 
 .buttons {
     height: 50px;
+}
+
+/*.constant-width {*/
+    /*overflow: hidden;*/
+    /*width: 100px;*/
+/*}*/
+
+.fixed-table {
+    table-layout: fixed;
+    word-wrap: break-word;
+}
+
+.alert-box-with-button {
+    height: 100px;
+    vertical-align: middle;
+}
+
+div.alert-warning {
+    position: relative;
+}
+
+div.alert-warning p.pull-left {
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+}
+
+.table-with-button {
+    height: 35px;
 }
