--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -9,5 +9,9 @@
     <li><del>Update active tab of menu bar</del></li>
     <li><del>Save in local storage</del></li>
     <li><span class="badge">v0.99</span> Export/Import functionality</li>
-    <li>Load cards in home screen.</li>
+    <li><del>Load cards in home screen.</del></li>
+    <li><del>Start a practice session.</del></li>
+    <li>End a session with a summary.</li>
+    <li>Refactor so that card view gets cards from methods.</li>
+    <li>Save session progress.</li>
 </ul>
