--- a/app/partials/edit-cards.html
+++ b/app/partials/edit-cards.html
@@ -22,8 +22,14 @@
             <input type="text" class="form-control" ng-model="card.back">
         </div>
 
-        <br>
+        <!--<br>-->
+    </div>
 
+    <div class="panel-footer buttons">
+        <!--Fuck-->
+        <!--<button class="btn btn-default">-->
+            <!--<span class="glyphicon glyphicon-ban-circle"></span>-->
+        <!--</button>-->
         <div class="pull-right">
             <button class="btn btn-default"
                     ng-if="isEditing(card)"
