--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -14,4 +14,5 @@
     <li>End a session with a summary.</li>
     <li>Refactor so that card view gets cards from methods.</li>
     <li>Save session progress.</li>
+    <li><del>Implement DB storage</del></li>
 </ul>
