--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -15,4 +15,5 @@
     <li>Refactor so that card view gets cards from methods.</li>
     <li>Save session progress.</li>
     <li><del>Implement DB storage</del></li>
+    <li>Filtering doesn't work!</li>
 </ul>
