--- a/app/partials/card.html
+++ b/app/partials/card.html
@@ -1,10 +1,8 @@
-<!--<ul ng-repeat="card in cards">-->
-<!--<li>{{ card.front }}</li>-->
-<!--<li>{{ card.back }}</li>-->
-<!--</ul>-->
 
+<!--MAIN CARD SCREEN-->
 <div ng-if="isSessionStarted() && !isSessionFinished()">
 
+    <!--CARD-->
     <div class="card blue-box" ng-click="revealAnswer()">
         <p>{{ getCurrentCard().front }}</p>
         <hr>
@@ -15,6 +13,7 @@
         </div>
     </div>
 
+    <!--SUCCESS/FAIL BUTTONS-->
     <div class="text-center buttons vspace10">
         <div ng-if="answerIsRevealed()">
             <span class="glyphicon glyphicon-chevron-left chevron"></span>
@@ -56,8 +55,10 @@
 </div>
 
 <div ng-if="isSessionFinished()">
-    <h1>Done!</h1>
-    <table class="table table-condensed">
+    <div class="alert alert-success">
+        <span class="glyphicon glyphicon-ok"></span> <strong>Well done!</strong>
+    </div>
+    <table class="table table-striped table-condensed">
         <tr ng-repeat="card in getOriginalDeck()">
             <td>{{ card.front }}</td>
             <td>{{ card.back }}</td>
@@ -73,3 +74,14 @@
     </div>
 </div>
 
+<div ng-if="isSessionStarted() && !isSessionFinished()" class="alert alert-info">
+    <ul>
+        <li>{{ getCurrentCard().front }}</li>
+        <li>{{ getCurrentCard().back }}</li>
+        <li>{{ getCurrentCard().timesAnswered }}</li>
+        <li>{{ getCurrentCard().timesAnsweredCorrectly }}</li>
+        <li>{{ getCurrentCard().winstreak }}</li>
+        <li>{{ getCurrentCard().lastVisitedTime }}</li>
+    </ul>
+
+</div>
