--- a/app/partials/edit-cards.html
+++ b/app/partials/edit-cards.html
@@ -3,11 +3,15 @@
 
 <!-- CREATE/EDIT CARD PANEL -->
 <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            <span ng-if="isInEditMode()">Edit card</span>
-            <span ng-if="!isInEditMode()">Add new card</span>
-        </h3>
+    <div class="panel-heading buttons">
+        <h1 class="panel-title">
+            <span ng-if="isInEditMode()" class="glyphicon glyphicon-pencil"></span>
+            <span ng-if="!isInEditMode()" class="glyphicon glyphicon-plus"></span>
+            <button ng-if="!isInEditMode()" class="btn btn-default pull-right"
+                    data-toggle="modal" data-target="#importCardModal">
+                <span class="glyphicon glyphicon-import"></span>
+            </button>
+        </h1>
     </div>
     <div class="panel-body">
         <div class="input-group">
@@ -28,7 +32,7 @@
     <div class="panel-footer buttons">
         <!--Fuck-->
         <!--<button class="btn btn-default">-->
-            <!--<span class="glyphicon glyphicon-ban-circle"></span>-->
+        <!--<span class="glyphicon glyphicon-ban-circle"></span>-->
         <!--</button>-->
         <div class="pull-right">
             <button class="btn btn-default"
@@ -37,10 +41,10 @@
                 <span class="glyphicon glyphicon-ban-circle"></span>
             </button>
             <!--<button class="btn btn-success"-->
-                    <!--ng-if="isEditing(card)"-->
-                    <!--ng-disabled="!formHasValidInput()"-->
-                    <!--ng-click="updateCard(card)">-->
-                <!--<span class="glyphicon glyphicon-save"></span>-->
+            <!--ng-if="isEditing(card)"-->
+            <!--ng-disabled="!formHasValidInput()"-->
+            <!--ng-click="updateCard(card)">-->
+            <!--<span class="glyphicon glyphicon-save"></span>-->
             <!--</button>-->
             <button class="btn btn-primary"
                     ng-disabled="!formHasValidInput() || exists(card)"
@@ -70,7 +74,7 @@
 <!-- FILTER INPUT -->
 <div class="input-group">
     <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-    <input ng-model="searchText" type="text" class="form-control">
+    <input ng-model="search.id" type="text" class="form-control">
 </div>
 
 <div class="vspace10"></div>
@@ -82,11 +86,14 @@
     <th>ES</th>
     </thead>
     <tbody>
-    <tr ng-repeat="card in getAllCards() | filter:searchText track by card.id"
+    <tr ng-repeat="card in getAllCards() | filter:search track by card.id"
         ng-class="{ success: isRecentlyAdded(card), info: isEditing(card) }"
         class="table-with-button"
         ng-click="editCard(card)">
-        <td>{{ card.front }}</td>
+        <td>
+            <span ng-if="isImported(card)" class="glyphicon glyphicon-import"></span>
+            {{ card.front }}
+        </td>
         <td>{{ card.back }}
             <button ng-click="deleteCard(card)"
                     class="btn btn-sm btn-danger pull-right"
@@ -97,3 +104,34 @@
     </tr>
     </tbody>
 </table>
+
+
+<!-- MODAL -->
+<div class="modal fade" id="importCardModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+                        class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Import cards</h4>
+            </div>
+            <div class="modal-body">
+                Paste cards here, using this format:
+                <div class="well">
+                    <ul class="import-examples">
+                        <li>ser | to be</li>
+                        <li>hacer | to do</li>
+                    </ul>
+                </div>
+                <textarea ng-model="zap" class="form-control" rows="10" placeholder="Paste cards here..."></textarea>
+            </div>
+            <div class="modal-footer">
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                <button ng-click="importCards(zap)" type="button" class="btn btn-primary" data-dismiss="modal">
+                    <span class="glyphicon glyphicon-import"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
