--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -1,19 +1,9 @@
 <h1>TODO</h1>
 <ul>
-    <li><del>Restrict keyboard movement before answer is revealed.</del></li>
-    <li><del>CREATE</del></li>
-    <li><del>UPDATE</del></li>
-    <li><del>DELETE</del></li>
-    <li>Card info</li>
-    <li>Configuration</li>
-    <li><del>Update active tab of menu bar</del></li>
-    <li><del>Save in local storage</del></li>
-    <li><span class="badge">v0.99</span> Export/Import functionality</li>
-    <li><del>Load cards in home screen.</del></li>
-    <li><del>Start a practice session.</del></li>
+    <li>Configuration ?</li>
+    <li>Export/Import functionality</li>
     <li>End a session with a summary.</li>
-    <li>Refactor so that card view gets cards from methods.</li>
     <li>Save session progress.</li>
-    <li><del>Implement DB storage</del></li>
-    <li>Filtering doesn't work!</li>
+    <li>Randomize practice deck.</li>
+    <li>Additional keyboard shortcuts.</li>
 </ul>
