--- a/app/partials/todo.html
+++ b/app/partials/todo.html
@@ -6,4 +6,5 @@
     <li>Save session progress.</li>
     <li>Randomize practice deck.</li>
     <li>Additional keyboard shortcuts.</li>
+    <li>End practice prematurely</li>
 </ul>
