--- a/app/partials/practice.html
+++ b/app/partials/practice.html
@@ -69,7 +69,7 @@
     <!--</div>-->
 
     <table class="table table-striped table-condensed table-hover">
-        <tr ng-repeat="card in getOriginalDeck()">
+        <tr ng-repeat="card in getOriginalDeck() track by card.id">
             <td>{{ card.front }}</td>
             <td>{{ card.back }}</td>
         </tr>
