--- a/app/partials/practice.html
+++ b/app/partials/practice.html
@@ -48,7 +48,6 @@
         <div class="progress-bar progress-bar-success" role="progressbar"
              aria-valuenow="{{ currentProgress() }}" aria-valuemin="0" aria-valuemax="100"
              style="width: {{ currentProgress() }}%;">
-            <!--<span class="sr-only">60% Complete</span>-->
         </div>
     </div>
 
@@ -69,9 +68,13 @@
     <!--</div>-->
 
     <table class="table table-striped table-condensed table-hover">
-        <tr ng-repeat="card in getOriginalDeck()">
+        <tr ng-repeat="card in getCompletedCards() track by card.id">
             <td>{{ card.front }}</td>
             <td>{{ card.back }}</td>
+            <td>
+                <span ng-if="practiceIsCompleted(card)" class="glyphicon glyphicon-star"></span>
+                <span ng-if="isTroublesome(card)" class="glyphicon glyphicon-warning-sign"></span>
+            </td>
         </tr>
     </table>
 
