--- a/app/css/app.css
+++ b/app/css/app.css
@@ -45,7 +45,6 @@ body {
     text-align: center;
 }
 
-
 .card > hr {
     color: #4777AF;
     border-top: 1px solid #4777AF;
@@ -102,8 +101,8 @@ body {
 }
 
 /*.constant-width {*/
-    /*overflow: hidden;*/
-    /*width: 100px;*/
+/*overflow: hidden;*/
+/*width: 100px;*/
 /*}*/
 
 .fixed-table {
@@ -156,4 +155,9 @@ div.alert-warning p.pull-left {
 .center {
     width: 60%;
     margin: 0 auto;
+}
+
+.input-group-addon {
+    min-width: 300px;
+    text-align: left;
 }
