--- a/app/partials/edit-cards.html
+++ b/app/partials/edit-cards.html
@@ -15,14 +15,14 @@
     </div>
     <div class="panel-body">
         <div class="input-group">
-            <span class="input-group-addon">EN</span>
+            <span class="input-group-addon input-group-addon-fixed-length">FRONT</span>
             <input type="text" class="form-control" ng-model="card.front">
         </div>
 
         <br>
 
-        <div class="input-group">
-            <span class="input-group-addon">ES</span>
+        <div class="input-group inpu">
+            <span class="input-group-addon input-group-addon-fixed-length">BACK</span>
             <input type="text" class="form-control" ng-model="card.back">
         </div>
     </div>
@@ -79,8 +79,8 @@
 <!-- TABLE OF CARDS -->
 <table class="table table-striped table-bordered table-condensed table-hover fixed-table">
     <thead>
-    <th>EN</th>
-    <th>ES<span class="badge pull-right">{{ getAllCards().length }}</span></th>
+    <th>FRONT</th>
+    <th>BACK<span class="badge pull-right">{{ getAllCards().length }}</span></th>
     </thead>
     <tbody>
     <tr ng-repeat="card in getAllCards() | filter:search track by card.id"
