Started added google sign-in.

--- a/app/partials/import-export-cards.html
+++ b/app/partials/import-export-cards.html
@@ -18,6 +18,13 @@
     </button>
 </div>
 
+<span class="g-signin"
+      data-cookiepolicy="single_host_origin"
+      data-callback="signinCallback"
+      data-clientid="609667240687-70b06bskdb8ih54rd91vt4eb137th5vc.apps.googleusercontent.com"
+      data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/drive.appdata">
+</span>
+
 
 <!-- EXPORT MODAL -->
 <div class="modal fade" id="exportStateModal" tabindex="-1" role="dialog" aria-labelledby="Save state"
