Implemented responsive view.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,9 +1,9 @@
 /* app css stylesheet */
 
 body {
-    width: 30%;
-    margin-left: auto !important;
-    margin-right: auto !important;
+    /*width: 30%;*/
+    /*margin-left: auto !important;*/
+    /*margin-right: auto !important;*/
     margin-top: 20px;
     background: #fff;
     /*#3a4145;*/
