--- a/app/partials/import-export-cards.html
+++ b/app/partials/import-export-cards.html
@@ -18,12 +18,12 @@
     </button>
 </div>
 
-<span class="g-signin"
-      data-cookiepolicy="single_host_origin"
-      data-callback="signinCallback"
-      data-clientid="609667240687-70b06bskdb8ih54rd91vt4eb137th5vc.apps.googleusercontent.com"
-      data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/drive.appdata">
-</span>
+<!--<span class="g-signin"-->
+      <!--data-cookiepolicy="single_host_origin"-->
+      <!--data-callback="signinCallback"-->
+      <!--data-clientid="780933248233-j5aree1dtb837tc143sqfhv5ias82r3t.apps.googleusercontent.com"-->
+      <!--data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/drive.appdata">-->
+<!--</span>-->
 
 
 <!-- EXPORT MODAL -->
@@ -75,35 +75,117 @@
 </div>
 
 
-<!-- Place this asynchronous JavaScript just before your </body> tag -->
+<!--&lt;!&ndash; Place this asynchronous JavaScript just before your </body> tag &ndash;&gt;-->
+<!--<script type="text/javascript">-->
+
+    <!--(function () {-->
+        <!--var po = document.createElement('script');-->
+        <!--po.type = 'text/javascript';-->
+        <!--po.async = true;-->
+        <!--po.src = 'https://apis.google.com/js/client:plusone.js';-->
+        <!--var s = document.getElementsByTagName('script')[0];-->
+        <!--s.parentNode.insertBefore(po, s);-->
+    <!--})();-->
+
+    <!--function signinCallback(authResult) {-->
+        <!--if (authResult['status']['signed_in']) {-->
+            <!--// Update the app to reflect a signed in user-->
+            <!--// Hide the sign-in button now that the user is authorized, for example:-->
+<!--//            document.getElementById('signinButton').setAttribute('style', 'display: none');-->
+        <!--} else {-->
+            <!--// Update the app to reflect a signed out user-->
+            <!--// Possible error values:-->
+            <!--//   "user_signed_out" - User is signed-out-->
+            <!--//   "access_denied" - User denied access to your app-->
+            <!--//   "immediate_failed" - Could not automatically log in the user-->
+            <!--console.log('Sign-in state: ' + authResult['error']);-->
+        <!--}-->
+    <!--}-->
+
+    <!--gapi.client.load('drive', 'v2', function () {-->
+        <!--console.log('Loaded drive client');-->
+        <!--readState();-->
+    <!--});-->
+<!--</script>-->
+
+
+<script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 <script type="text/javascript">
-    (function () {
-        var po = document.createElement('script');
-        po.type = 'text/javascript';
-        po.async = true;
-        po.src = 'https://apis.google.com/js/client:plusone.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(po, s);
-    })();
+    var CLIENT_ID = '780933248233-j5aree1dtb837tc143sqfhv5ias82r3t.apps.googleusercontent.com';
+    var SCOPES = [
+        'https://www.googleapis.com/auth/drive.file',
+        'https://www.googleapis.com/auth/userinfo.email',
+        'https://www.googleapis.com/auth/userinfo.profile',
+        'https://www.googleapis.com/auth/plus.login',
+        'https://www.googleapis.com/auth/drive.appdata'
+        // Add other scopes needed by your application.
+    ];
 
+    /**
+     * Called when the client library is loaded.
+     */
+    function handleClientLoad() {
+        checkAuth();
+    }
 
-    function signinCallback(authResult) {
-        if (authResult['status']['signed_in']) {
-            // Update the app to reflect a signed in user
-            // Hide the sign-in button now that the user is authorized, for example:
-//            document.getElementById('signinButton').setAttribute('style', 'display: none');
+    /**
+     * Check if the current user has authorized the application.
+     */
+    function checkAuth() {
+        gapi.auth.authorize(
+                {'client_id': CLIENT_ID, 'scope': SCOPES.join(' '), 'immediate': true},
+                handleAuthResult);
+    }
+
+    /**
+     * Called when authorization server replies.
+     *
+     * @param {Object} authResult Authorization result.
+     */
+    function handleAuthResult(authResult) {
+        if (authResult) {
+            console.log("AUTH!");
+            zap();
+            // Access token has been successfully retrieved, requests can be sent to the API
         } else {
-            // Update the app to reflect a signed out user
-            // Possible error values:
-            //   "user_signed_out" - User is signed-out
-            //   "access_denied" - User denied access to your app
-            //   "immediate_failed" - Could not automatically log in the user
-            console.log('Sign-in state: ' + authResult['error']);
+            console.log("NO AUTH!");
+            // No access token could be retrieved, force the authorization flow.
+            gapi.auth.authorize(
+                    {'client_id': CLIENT_ID, 'scope': SCOPES, 'immediate': false},
+                    handleAuthResult);
         }
     }
 
-    gapi.client.load('drive', 'v2', function () {
-        console.log('Loaded drive client');
-        readState();
-    });
+    function pow() {
+        gapi.client.load('drive', 'v2', function() {
+            console.log('Loaded drive client');
+//            readState();
+            var request = gapi.client.drive.files.list({
+                'q': '\'appdata\' in parents'
+            });
+            request.execute(function(resp) {
+                for (i in resp.items) {
+                    console.log(i);
+                }
+                // If we have nothing, use the defaults.
+//                stateToForm();
+            });
+        });
+    }
+
+    function zap() {
+        var token = gapi.auth.getToken();
+        var up = '/' + 'holler';
+        console.log(gapi.auth);
+        $.ajax("https://www.googleapis.com/upload/drive/v2/files" + up + "?uploadType=multipart", {
+            data: { a: 1 },
+            headers: {Authorization: 'Bearer ' + token.access_token},
+            contentType: false,
+            processData: false,
+            type: 'PUT',
+            success: function(data) {
+                console.log("File written");
+            }
+        });
+    }
 </script>
