--- a/app/partials/practice.html
+++ b/app/partials/practice.html
@@ -1,7 +1,6 @@
 <!--MAIN CARD SCREEN-->
 <div ng-if="isSessionStarted() && !isSessionFinished()">
 
-
     <!--CARD-->
     <!--<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>-->
     <div class="card blue-box" ng-click="revealAnswer()">
@@ -31,7 +30,6 @@
                 <span class="glyphicon glyphicon-thumbs-up"></span>
             </button>
 
-
             <span class="glyphicon glyphicon-chevron-right chevron"></span>
         </div>
         <div ng-if="!answerIsRevealed()">
@@ -42,31 +40,25 @@
                 <span class="glyphicon glyphicon-thumbs-up"></span>
             </button>
         </div>
+
     </div>
 
     <!--PROGRESS BAR-->
-    <div class="progress vspace30">
-        <div class="progress-bar progress-bar-success" role="progressbar"
-             aria-valuenow="{{ currentProgress() }}" aria-valuemin="0" aria-valuemax="100"
-             style="width: {{ currentProgress() }}%;">
+    <div class="row vspace30">
+        <div class="col-md-1">
+            <button class="btn btn-default btn-sm" ng-click="terminateSession()">
+                <span class="glyphicon glyphicon-stop"></span>
+            </button>
+        </div>        
+        <div class="col-md-11 padding-top-5">
+            <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar"
+                    aria-valuenow="{{ currentProgress() }}" aria-valuemin="0" aria-valuemax="100"
+                    style="width: {{ currentProgress() }}%;">
+                </div>
+            </div>
         </div>
-    </div>
-
-    <div class="alert alert-info">
-        <ul>
-            <!--<li>{{ getCurrentCard().front }} | {{ getCurrentCard().back }}</li>-->
-            <li><strong>Origin: {{ getCurrentCard().origin }}</strong></li>
-            <li><strong>Winstreak: {{ getCurrentCard().winstreak }}</strong></li>
-            <li>Times answered: {{ getCurrentCard().timesAnswered }}</li>
-            <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }}</li>
-            <!--<li>Last visited: {{ getCurrentCard().lastVisitedTime }}</li>-->
-        </ul>
-
-    </div>
-    <button class="btn btn-default pull-right" ng-click="terminateSession()">
-        <span class="glyphicon glyphicon-stop"></span> End session
-    </button>
-
+    </div class="row">
 </div>
 
 <!--SESSION WELCOME-->
@@ -84,17 +76,9 @@
     <!--</div>-->
 
     <table class="table table-striped table-condensed table-hover">
-        <tr ng-repeat="card in getCompletedCards() track by card.id">
+        <tr ng-repeat="card in getOriginalDeck() track by card.id">
             <td>{{ card.front }}</td>
             <td>{{ card.back }}</td>
-            <td>
-                <span ng-if="practiceIsCompleted(card)" class="glyphicon glyphicon-star"
-                      data-toggle="tooltip" data-placement="left"
-                      title="You have finished practicing this card for now."></span>
-                <span ng-if="isTroublesome(card)" class="glyphicon glyphicon-warning-sign"
-                      data-toggle="tooltip" data-placement="left"
-                      title="You are having trouble with this card."></span>
-            </td>
         </tr>
     </table>
 
@@ -105,3 +89,14 @@
 
 </div>
 
+<div ng-if="isSessionStarted() && !isSessionFinished()" class="alert alert-info">
+    <ul>
+        <!--<li>{{ getCurrentCard().front }} | {{ getCurrentCard().back }}</li>-->
+        <li><strong>Origin: {{ getCurrentCard().origin }}</strong></li>
+        <li><strong>Winstreak: {{ getCurrentCard().winstreak }}</strong></li>
+        <li>Times answered: {{ getCurrentCard().timesAnswered }}</li>
+        <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }}</li>
+        <li>Last visited: {{ getCurrentCard().lastVisitedTime }}</li>
+    </ul>
+
+</div>
