--- a/app/partials/practice.html
+++ b/app/partials/practice.html
@@ -45,12 +45,12 @@
 
     <!--PROGRESS BAR-->
     <div class="row vspace30">
-        <div class="col-md-1">
+        <div class="col-sm-1">
             <button class="btn btn-default btn-sm" ng-click="terminateSession()">
                 <span class="glyphicon glyphicon-stop"></span>
             </button>
         </div>        
-        <div class="col-md-11 padding-top-5">
+        <div class="col-sm-11 padding-top-5">
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar"
                     aria-valuenow="{{ currentProgress() }}" aria-valuemin="0" aria-valuemax="100"
@@ -59,6 +59,19 @@
             </div>
         </div>
     </div class="row">
+
+    <div class="alert alert-info">
+        <ul>
+            <!--<li>{{ getCurrentCard().front }} | {{ getCurrentCard().back }}</li>-->
+            <li><strong>Origin: {{ getCurrentCard().origin }}</strong></li>
+            <li><strong>Winstreak: {{ getCurrentCard().winstreak }}</strong></li>
+            <li>Times answered: {{ getCurrentCard().timesAnswered }}</li>
+            <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }}</li>
+            <!--<li>Last visited: {{ getCurrentCard().lastVisitedTime }}</li>-->
+        </ul>
+
+    </div>
+
 </div>
 
 <!--SESSION WELCOME-->
@@ -77,8 +90,14 @@
 
     <table class="table table-striped table-condensed table-hover">
         <tr ng-repeat="card in getOriginalDeck() track by card.id">
-            <td>{{ card.front }}</td>
-            <td>{{ card.back }}</td>
+            <td>
+                <span ng-if="practiceIsCompleted(card)" class="glyphicon glyphicon-star"
+                      data-toggle="tooltip" data-placement="left"
+                      title="You have finished practicing this card for now."></span>
+                <span ng-if="isTroublesome(card)" class="glyphicon glyphicon-warning-sign"
+                      data-toggle="tooltip" data-placement="left"
+                      title="You are having trouble with this card."></span>
+            </td>
         </tr>
     </table>
 
@@ -86,17 +105,5 @@
         <span class="glyphicon glyphicon-ok"></span>
     </button>
 
-
-</div>
-
-<div ng-if="isSessionStarted() && !isSessionFinished()" class="alert alert-info">
-    <ul>
-        <!--<li>{{ getCurrentCard().front }} | {{ getCurrentCard().back }}</li>-->
-        <li><strong>Origin: {{ getCurrentCard().origin }}</strong></li>
-        <li><strong>Winstreak: {{ getCurrentCard().winstreak }}</strong></li>
-        <li>Times answered: {{ getCurrentCard().timesAnswered }}</li>
-        <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }}</li>
-        <li>Last visited: {{ getCurrentCard().lastVisitedTime }}</li>
-    </ul>
 
 </div>
