--- a/app/partials/practice.html
+++ b/app/partials/practice.html
@@ -23,7 +23,7 @@
         <div ng-if="answerIsRevealed()">
             <span class="glyphicon glyphicon-chevron-left chevron"></span>
 
-            <button class="btn btn-warning btn-lg" ng-click="fail()">
+            <button class="btn btn-warning btn-lg hspace20" ng-click="fail()">
                 <span class="glyphicon glyphicon-thumbs-down"></span>
             </button>
             <button class="btn btn-success btn-lg" ng-click="success()">
@@ -33,7 +33,7 @@
             <span class="glyphicon glyphicon-chevron-right chevron"></span>
         </div>
         <div ng-if="!answerIsRevealed()">
-            <button class="btn btn-default btn-lg" disabled>
+            <button class="btn btn-default btn-lg hspace20" disabled>
                 <span class="glyphicon glyphicon-thumbs-down"></span>
             </button>
             <button class="btn btn-default btn-lg" disabled>
@@ -43,13 +43,13 @@
 
     </div>
 
-    <!--PROGRESS BAR-->
-    <div class="row vspace30">
-        <div class="col-sm-1">
+    <!--PROGRESS BAR-->    
+        <div class="row vspace30">
+        <div class="col-sm-1" style="float: left">
             <button class="btn btn-default btn-sm" ng-click="terminateSession()">
                 <span class="glyphicon glyphicon-stop"></span>
             </button>
-        </div>        
+        </div>
         <div class="col-sm-11 padding-top-5">
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar"
@@ -58,16 +58,32 @@
                 </div>
             </div>
         </div>
-    </div class="row">
+    </div>
 
-    <div class="alert alert-info">
+<!--     <div class="row vspace30">
+        <div class="col-sm-6" style="float: left">
+            <button class="btn btn-default btn-sm" ng-click="terminateSession()">
+                <span class="glyphicon glyphicon-stop"></span>
+            </button>
+        </div>        
+        <div class="col-sm-6 padding-top-5">
+            <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar"
+                    aria-valuenow="{{ currentProgress() }}" aria-valuemin="0" aria-valuemax="100"
+                    style="width: {{ currentProgress() }}%;">
+                </div>
+            </div>
+        </div>
+    </div class="row">
+ -->
+    <div class="alert alert-info small-text">
         <ul>
             <!--<li>{{ getCurrentCard().front }} | {{ getCurrentCard().back }}</li>-->
-            <li><strong>Origin: {{ getCurrentCard().origin }}</strong></li>
+            <li><strong>{{ getCurrentCard().origin }}</strong></li>
             <li><strong>Winstreak: {{ getCurrentCard().winstreak }}</strong></li>
-            <li>Times answered: {{ getCurrentCard().timesAnswered }}</li>
-            <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }}</li>
-            <!--<li>Last visited: {{ getCurrentCard().lastVisitedTime }}</li>-->
+            <!-- <li>Times answered: {{ getCurrentCard().timesAnswered }}</li> -->
+            <li>Times answered correctly: {{ getCurrentCard().timesAnsweredCorrectly }} / {{ getCurrentCard().timesAnswered }}</li>
+            <li>Last visited: {{ getFormattedLastVisitedDate(getCurrentCard()) }}</li>
         </ul>
 
     </div>
