Googe drive file handling.

--- a/app/partials/import-export-cards.html
+++ b/app/partials/import-export-cards.html
@@ -16,6 +16,8 @@
     <button class="btn btn-danger" data-toggle="modal" data-target="#importStateModal">
         <span class="glyphicon glyphicon-floppy-open"></span> Import state
     </button>
+    <button ng-click="saveAppData()" class="btn btn-default">Save GD</button>
+    <button ng-click="loadAppData()" class="btn btn-default">Load GD</button>
 </div>
 
 <!--<span class="g-signin"-->
