--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,8 +6,10 @@ body {
     /*margin-right: auto !important;*/
     margin-top: 20px;
     background: #fff;
+    /*background-image: url('../img/background.jpg');*/
     /*#3a4145;*/
 }
+
 
 .menu {
     list-style: none;
